refactor entire project, add kafka and redis