@@ -4,6 +4,7 @@ import com.airline.dto.request.InsuranceCoverageRequest;
 import com.airline.dto.response.InsuranceCoverageResponse;
 import com.airline.entity.Ancillary;
 import com.airline.entity.InsuranceCoverage;
+import com.airline.exception.ResourceNotFoundException;
 import com.airline.mapper.InsuranceCoverageMapper;
 import com.airline.repository.AncillaryRepository;
 import com.airline.repository.InsuranceCoverageRepository;
@@ -11,85 +12,119 @@ import com.airline.service.InsuranceCoverageService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 @Slf4j
 public class InsuranceCoverageServiceImpl implements InsuranceCoverageService {
 
+    private final InsuranceCoverageRepository coverageRepository;
     private final AncillaryRepository ancillaryRepository;
-    private final InsuranceCoverageRepository insuranceCoverageRepository;
-
 
     @Override
-    public InsuranceCoverageResponse createInsuranceCoverage(InsuranceCoverageRequest insuranceCoverageRequest) {
+    @Transactional
+    public InsuranceCoverageResponse createCoverage(InsuranceCoverageRequest request)
+            throws ResourceNotFoundException {
+        Ancillary ancillary = ancillaryRepository.findById(request.getAncillaryId())
+                .orElseThrow(() -> new ResourceNotFoundException(
+                        "Ancillary not found with ID: " + request.getAncillaryId()));
 
-        Ancillary ancillary = ancillaryRepository.findById(insuranceCoverageRequest.getAncillaryId())
-                .orElseThrow(() -> new RuntimeException("Ancillary not found"));
-
-        InsuranceCoverage coverage = InsuranceCoverageMapper.toEntity(
-                insuranceCoverageRequest, ancillary
-        );
-        InsuranceCoverage savedCoverage = insuranceCoverageRepository.save(coverage);
-        return InsuranceCoverageMapper.toResponse(savedCoverage);
+        InsuranceCoverage coverage = InsuranceCoverageMapper.toEntity(request, ancillary);
+        InsuranceCoverage saved = coverageRepository.save(coverage);
+        return InsuranceCoverageMapper.toResponse(saved);
     }
 
     @Override
-    public InsuranceCoverageResponse getInsuranceCoverageById(Long id) {
-        InsuranceCoverage insuranceCoverage = insuranceCoverageRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Insurance coverage not found"));
-        return InsuranceCoverageMapper.toResponse(insuranceCoverage);
-    }
-
-    @Override
-    public InsuranceCoverageResponse updateInsuranceCoverage(Long id, InsuranceCoverageRequest insuranceCoverageRequest) {
-
-        InsuranceCoverage insuranceCoverage = insuranceCoverageRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Insurance coverage not found"));
-
-        Ancillary ancillary = null;
-        if (insuranceCoverage.getAncillary() == null) {
-            throw new RuntimeException("Ancillary not found");
+    @Transactional
+    public List<InsuranceCoverageResponse> createCoveragesBulk(List<InsuranceCoverageRequest> requests)
+            throws ResourceNotFoundException {
+        if (requests == null || requests.isEmpty()) {
+            throw new IllegalArgumentException("Coverage request list cannot be empty");
         }
 
-        InsuranceCoverageMapper.updateEntityFromRequest(insuranceCoverage, insuranceCoverageRequest, ancillary);
-        InsuranceCoverage updatedCoverage = insuranceCoverageRepository.save(insuranceCoverage);
-        return InsuranceCoverageMapper.toResponse(updatedCoverage);
-    }
+        Long ancillaryId = requests.get(0).getAncillaryId();
+        boolean allSameAncillary = requests.stream()
+                .allMatch(req -> req.getAncillaryId().equals(ancillaryId));
 
-    @Override
-    public void deleteInsuranceCoverage(Long id) {
-        InsuranceCoverage insuranceCoverage = insuranceCoverageRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Insurance coverage not found"));
-        insuranceCoverageRepository.delete(insuranceCoverage);
+        if (!allSameAncillary) {
+            throw new IllegalArgumentException(
+                    "All coverages in bulk request must belong to the same ancillary");
+        }
 
+        Ancillary ancillary = ancillaryRepository.findById(ancillaryId)
+                .orElseThrow(() -> new ResourceNotFoundException(
+                        "Ancillary not found with ID: " + ancillaryId));
 
-    }
+        List<InsuranceCoverage> coverages = requests.stream()
+                .map(request -> InsuranceCoverageMapper.toEntity(request, ancillary))
+                .collect(Collectors.toList());
 
-    @Override
-    public List<InsuranceCoverageResponse> getInsuranceCoveragesByAncillaryId(Long ancillaryId) {
-        return insuranceCoverageRepository.findByAncillaryId(ancillaryId)
-                .stream()
+        List<InsuranceCoverage> saved = coverageRepository.saveAll(coverages);
+        return saved.stream()
                 .map(InsuranceCoverageMapper::toResponse)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
-    public List<InsuranceCoverageResponse> getActiveInsuranceCoveragesByAncillaryId(Long ancillaryId) {
-        return insuranceCoverageRepository.findByAncillaryIdAndActiveTrue(ancillaryId)
-                .stream()
-                .map(InsuranceCoverageMapper::toResponse)
-                .toList();
+    @Transactional
+    public InsuranceCoverageResponse updateCoverage(Long id, InsuranceCoverageRequest request)
+            throws ResourceNotFoundException {
+        InsuranceCoverage existing = coverageRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException(
+                        "Insurance coverage not found with ID: " + id));
+
+        Ancillary ancillary = null;
+        if (request.getAncillaryId() != null) {
+            ancillary = ancillaryRepository.findById(request.getAncillaryId())
+                    .orElseThrow(() -> new ResourceNotFoundException(
+                            "Ancillary not found with ID: " + request.getAncillaryId()));
+        }
+
+        InsuranceCoverageMapper.updateEntityFromRequest(existing, request, ancillary);
+        InsuranceCoverage updated = coverageRepository.save(existing);
+        return InsuranceCoverageMapper.toResponse(updated);
     }
 
     @Override
-    public List<InsuranceCoverageResponse> getAllInsuranceCoverages() {
-        return insuranceCoverageRepository.findAll()
-                .stream()
+    @Transactional
+    public void deleteCoverage(Long id) throws ResourceNotFoundException {
+        InsuranceCoverage coverage = coverageRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException(
+                        "Insurance coverage not found with ID: " + id));
+        coverageRepository.delete(coverage);
+    }
+
+    @Override
+    public InsuranceCoverageResponse getCoverageById(Long id) throws ResourceNotFoundException {
+        InsuranceCoverage coverage = coverageRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException(
+                        "Insurance coverage not found with ID: " + id));
+        return InsuranceCoverageMapper.toResponse(coverage);
+    }
+
+    @Override
+    public List<InsuranceCoverageResponse> getCoveragesByAncillaryId(Long ancillaryId) {
+        return coverageRepository.findByAncillaryIdAndActiveTrue(ancillaryId).stream()
                 .map(InsuranceCoverageMapper::toResponse)
-                .toList();
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    public List<InsuranceCoverageResponse> getActiveCoveragesByAncillaryId(Long ancillaryId) {
+        return coverageRepository.findByAncillaryIdAndActiveTrue(ancillaryId).stream()
+                .map(InsuranceCoverageMapper::toResponse)
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    public List<InsuranceCoverageResponse> getAllCoverages() {
+        return coverageRepository.findAll().stream()
+                .map(InsuranceCoverageMapper::toResponse)
+                .collect(Collectors.toList());
     }
 }
 
